<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/lobster_two_bold"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:text="@string/splash_titulo"
            android:textAllCaps="false"
            android:textColor="@color/primaryDarkColor"
            android:textSize="34sp"
            android:textStyle="bold"
            android:transitionName="txt_nom_empresa" />

        <ImageView
            android:id="@+id/img_rub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-100dp"
            android:layout_weight="1"
            android:contentDescription="@string/rubik"
            android:scaleType="centerInside"
            android:transitionName="img_rubik"
            app:srcCompat="@drawable/rubik" />

        <TextView
            android:id="@+id/text_slogan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-200dp"
            android:layout_weight="1"
            android:fontFamily="@font/lobster_two_bold"
            android:gravity="center"
            android:text="@string/splash_subtit"
            android:textColor="@color/primaryDarkColor"
            android:textSize="20sp"
            android:transitionName="txt_slogan" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>