<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryDarkColor"
    tools:context=".view.HomeActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonLogout"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#E91E63"
            android:elegantTextHeight="true"
            android:elevation="10dp"
            android:fontFamily="@font/audiowide"
            android:letterSpacing="0.4"
            android:padding="40dp"
            android:text="@string/logoutText"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:cornerRadius="30dp"
            app:icon="@drawable/logout"
            app:iconGravity="top"
            app:iconPadding="30dp"
            app:iconSize="40dp"
            app:iconTint="@color/white"
            app:iconTintMode="src_in"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/buttonPerfil"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/buttonLogout"
            android:backgroundTint="#4CAF50"
            android:elegantTextHeight="true"
            android:elevation="10dp"
            android:fontFamily="@font/audiowide"
            android:letterSpacing="0.4"
            android:padding="40dp"
            android:text="@string/perfil"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:cornerRadius="30dp"
            app:icon="@drawable/perfil"
            app:iconGravity="top"
            app:iconPadding="30dp"
            app:iconSize="40dp"
            app:iconTint="@color/white"
            app:iconTintMode="src_in"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/buttonPalabra"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonLogout"
            android:layout_alignEnd="@id/buttonLogout"
            android:backgroundTint="#03A9F4"
            android:elegantTextHeight="true"
            android:elevation="10dp"
            android:fontFamily="@font/audiowide"
            android:letterSpacing="0.4"
            android:padding="40dp"
            android:text="@string/wordsText"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:cornerRadius="30dp"
            app:icon="@drawable/palabra"
            app:iconGravity="top"
            app:iconPadding="30dp"
            app:iconSize="40dp"
            app:iconTint="@color/white"
            app:iconTintMode="src_in"
            tools:ignore="DuplicateClickableBoundsCheck,TextContrastCheck" />

        <Button
            android:id="@+id/buttonAhorcado"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonPerfil"
            android:layout_alignEnd="@id/buttonPerfil"
            android:layout_marginStart="10dp"
            android:backgroundTint="#FF5722"
            android:elegantTextHeight="true"
            android:elevation="10dp"
            android:fontFamily="@font/audiowide"
            android:letterSpacing="0.4"
            android:padding="40dp"
            android:text="@string/bombaText"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:cornerRadius="30dp"
            app:icon="@drawable/bomba"
            app:iconGravity="top"
            app:iconPadding="30dp"
            app:iconSize="40dp"
            app:iconTint="@color/white"
            app:iconTintMode="src_in"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/buttonLetras"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonPalabra"
            android:layout_alignEnd="@id/buttonLogout"
            android:backgroundTint="#009688"
            android:elegantTextHeight="true"
            android:elevation="10dp"
            android:fontFamily="@font/audiowide"
            android:letterSpacing="0.4"
            android:padding="40dp"
            android:text="@string/otro"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:cornerRadius="30dp"
            app:icon="@drawable/otro"
            app:iconGravity="top"
            app:iconPadding="30dp"
            app:iconSize="40dp"
            app:iconTint="@color/white"
            app:iconTintMode="src_in"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/buttonStats"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttonAhorcado"
            android:layout_alignEnd="@id/buttonPerfil"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#FFC107"
            android:elegantTextHeight="true"
            android:elevation="10dp"
            android:fontFamily="@font/audiowide"
            android:letterSpacing="0.4"
            android:padding="40dp"
            android:text="@string/statsText"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold"
            app:cornerRadius="30dp"
            app:icon="@drawable/estats"
            app:iconGravity="top"
            app:iconPadding="30dp"
            app:iconSize="40dp"
            app:iconTint="@color/white"
            app:iconTintMode="src_in" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>