<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryDarkColor"
        android:padding="20dp"
        tools:context=".view.PerfilActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="48dp"
            app:cardBackgroundColor="#FF5722"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center|top"
                android:layout_margin="15dp"
                android:tintMode="src_in"
                app:srcCompat="@drawable/bomba"
                app:tint="@color/primaryDarkColor" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="8dp"
                android:text="@string/bombaText"
                android:textColor="@color/primaryDarkColor"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/palabraGuionesBomb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:letterSpacing="0.1"
        android:text="@string/palabraGuiones"
        android:textColor="@color/secondaryDarkColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/palabraGuionesBomb">

            <ImageView
                android:id="@+id/imageBomb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/dinamita_1" />
        </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:letterSpacing="0.1"
        android:text="@string/textPalabraBomb"
        android:textColor="@color/secondaryDarkColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/textView15"
            tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/textLetraBomb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/textLetraBomb"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/textRespuestasBomb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/textLetraBomb"
        app:layout_constraintTop_toBottomOf="@+id/textLetraBomb" />

    <Button
            android:id="@+id/buttonBomb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/secondaryDarkColor"
            android:text="@string/textBotonBomb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textLetraBomb" />


    </androidx.constraintlayout.widget.ConstraintLayout>
